TAG: qcreports_db-6-0-4-6
DATE: 07/15/2016
STAFF: sc
CHANGES: TR11942 new reports:
1) monthly/ALL_ExpressedSeq.py
2) weekly/ALL_NoSubType.py

TAG: qcreports_db-6-0-4-5
DATE: 06/27/2016
STAFF: lec
CHANGES:
1) fix qcr.html/goload links

TAG: qcreports_db-6-0-4-4
DATE: 06/06/2016
STAFF: lec
CHANGES:
1) fix/stage : GXD_SameStructure.py

TAG: qcreports_db-6-0-4-3
TAG: qcreports_db-6-0-4-2
TAG: qcreports_db-6-0-4-1
DATE: 05/04/2016, 05/12/2016
STAFF: lec
CHANGES:
1) TR12223/gxd anatomy II : merge to trunk

TAG: qcreports_db-6-0-3-1
DATE: 04/07/2016
STAFF: lec
CHANGES:
1) TR12314/ALL_WithdrawnMarker.sql

1) needed out join to mcl1
TAG: qcreports_db-6-0-2-8
DATE: 02/17/2016
STAFF: sc
CHANGES: TR12255 mgd/GXD_DupGenotype.py
1) needed out join to mcl1
2) needed chr as part of dup genotype key so transformations aren't included 
	(different marker, same symbol)

TAG: qcreports_db-6-0-2-7
DATE: 02/09/2016
STAFF: sc
CHANGES: TR12255 mgd/GXD_DupGenotype.py rewrite to include mcl2, header, 
	collapse all genotype IDs onto one line for a dup genotype

TAG: qcreports_db-6-0-2-6
TAG: qcreports_db-6-0-2-5
DATE: 01/26/2015
STAFF: sc
CHANGES: TR12057
1) GXD_AllelePairCheck.sql.rpt
2) GXD_OrphanGenotype.sql.rpt
3) GXD_WildType.sql.rpt

TAG: qcreports_db-6-0-2-4
DATE: 01/25/2016
STAFF: dbm
CHANGES:
1) GXD_Transgenic.py: Retired report (per Connie)

TAG: qcreports_db-6-0-2-3
DATE: 01/22/2016
STAFF: lec
CHANGES:
1) VOC_InvalidInferred.py : bug fix/value

TAG: qcreports_db-tr12223-1
DATE: 01/08/2016, 05/04/2016
STAFF: lec
CHANGES:
1) TR12223/gxd anatomy II
obsoelte:
GXD_Transgenic.rpt
GXD_EMAPS_MappingChecks.sql
GXD_EMAPS_MappingAdUnmappedChecks.py
GXD_EMAPS_MappingNameChecks.py
GXD_Mouse_Developmental_Anatomy.py
2) TR12279/added some comments
3) TR12314/ALL_WithdrawnMarker.sql
4) TR12289/MGI_QTL_ReferenceNotes.sql
5) TR12026/GXD_Stats.py
6) TR12242/adding assay last modified
7) TR12323/GXD_SpecimenTypeConflict.py

change:
GXD_EMAPS_Terms.py
GXD_SpecNoAge.sql
GXD_SpecTheiler.sql