@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-5-?
+DATE: 07/25/2016
+STAFF: lec
+CHANGES: 
+1) TR12222/expects only one delimiter, but *any* delimiter may be used in inferredFrom field
+
 TAG: qcreports_db-6-0-4-6
 DATE: 07/15/2016
 STAFF: sc
